fixed alexis link, home blob alignment, and home picture blurry

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -49,7 +49,7 @@
                 position: absolute;
                 width: 382.87px;
                 height: 382.49px;
-                left: 825px;
+                right: 300px;
                 top: 50px;
             }
 
@@ -57,7 +57,7 @@
                 position: absolute;
                 width: 355.89px;
                 height: 355.54px;
-                left: 1050px;
+                right: 100px;
                 top: 290px;
             }
         }
